--- a/Assignment-1/main.html
+++ b/Assignment-1/main.html
@@ -17,9 +17,40 @@
         <a href="Contact.html">Contact</a>
     </div>
 
-    <div>
+    <div id= "container">
         <p>Searching for a nutritious option? Your quest concludes right here!</p>
+
+
+        <div class="gallery">
+            <img src="Images/ProteinPowderMain.jpg" width="200px" height="200px">
+            <h4>Protein Powders</h4>
+            <a href="ProteinPowder.html"><button id="btn1">More>></button></a>
+        </div>
+
+
+        <div class="gallery">
+            <img src="Images/yogurt.jpg" width="200px" height="200px">
+            <h4>Yogurt</h4>
+            <a href="Yogurt.html"><button id="btn2">More>></button></a>
+        </div>
+
+        <div class="gallery">
+            <img src="Images/Snacks.jpg" width="200px" height="200px">
+            <h4>Snacks</h4>
+            <a href="Snacks.html"><button id="btn2">More>></button></a>
+        </div>
     </div>
+
+    <footer>
+        <div>
+        <p> &copy; 2023 Wholesome Delights Emporium. All rights reserved.</p>
+        <p>Author: Hetal Gada</p>
+        <p>Phone Number: <a href="tel:+17814601631">+1 (781) 460-1631</a></p>
+        <p><a href="mailto:hetalgada15@emporium.com">gada.he@emporium.com</a></p>
+        </div>
+    </footer>
+
+
     
 </body>
 </html>
