--- a/Assignment-1/ProteinPowder.html
+++ b/Assignment-1/ProteinPowder.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Protein Powders</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Protein powders</title>
     <link rel="icon" href="Images/icon.png" type="images/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=FontName">
     <link rel="stylesheet" type="text/css" href="ProteinPowder.css">
+  
 </head>
 <body>
     <header>
@@ -16,7 +17,6 @@
         <a class="active" href="Main.html">Home</a>
         <a href="Contact.html">Contact</a>
     </div>
-
     <div class="container">
         <div class="product-container">
             <img src="Images/wheyProtein.jpg" alt="wheyProtein" height="320px" width="240px">
@@ -33,7 +33,7 @@
                 Your browser does not support the video tag.
             </video>                  
         </div>
-
+        
         <div class="product-container">
             <img src="Images/OrgaincProtein.jpg" alt="OrgaincProtein" height="320px" width="240px">
             <p>Orgain Organic Vegan Protein Powder, Creamy Chocolate Fudge - 21g Plant Based Protein, Gluten Free, Dairy Free, Lactose Free, Soy Free, No Sugar Added, Kosher, For Smoothies & Shakes - 2.03lb</p>
@@ -49,9 +49,7 @@
                 Your browser does not support the video tag.
             </video>             
         </div>
-
     </div>
-
     <footer>
         <div>
         <p>&copy; 2023 OrganicPantry. All rights reserved.</p>
@@ -60,6 +58,5 @@
         <p><a href="mailto:hetalgada15@emporium.com">gada.he@emporium.com</a></p>
         </div>
     </footer>
-    
 </body>
 </html>
