--- a/Assignment-1/Gourmet Culinary.html
+++ b/Assignment-1/Gourmet Culinary.html
@@ -6,7 +6,7 @@
     <title>Yogurts</title>
     <link rel="icon" href="Images/icon.png" type="images/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=FontName">
-    <link rel="stylesheet" type="text/css" href="GourmentCulinary.css">
+    <link rel="stylesheet" type="text/css" href="Gourment Culinary.css">
  
 </head>
 <body>
@@ -22,7 +22,7 @@
             <img src="Images/BalsamicGlaze.png" alt="BalsamicGlaze" height="320px" width="240px">
             <p>Artisan Balsamic Glaze - 8.5oz</p>
             <summary>Ingredients:
-                Premium Balsamic Vinegar of Modena (Grapes, Acetic Acid), Natural Brown Sugar, Cooked Grape Must, Contains Sulfites. This exquisite Balsamic Glaze is crafted with a perfect blend of aged vinegar, natural brown sugar, and cooked grape must, delivering a harmonious balance of sweetness and acidity. The result is a versatile glaze that adds a touch of sophistication to your culinary creations. Drizzle it over salads, roasted vegetables, or grilled meats to elevate the flavors with its rich and complex taste. The inclusion of premium Balsamic Vinegar ensures an authentic and luxurious experience, making it a must-have condiment for the culinary enthusiast. Savor the artistry of flavor with our Artisan Balsamic Glaze!</summary>
+                Premium Balsamic Vinegar of Modena (Grapes, Acetic Acid), Natural Brown Sugar, Cooked Grape Must, Contains Sulfites. </summary>
             <br>            
             <p>Reviews</p>
             <audio controls>
@@ -35,7 +35,7 @@
             <img src="Images/GourmetSeaSaltSampler.png" alt="GourmetSeaSaltSampler" height="320px" width="240px">
             <p>Gourmet Sea Salt Sampler - Exquisite Collection of Artisanal Salts</p>
             <summary>Ingredients:
-                A curated selection of premium sea salts sourced from around the world, this Gourmet Sea Salt Sampler is a testament to culinary sophistication. Immerse your taste buds in the rich, nuanced flavors of hand-harvested salts, each with its unique origin and mineral composition. From the delicate Fleur de Sel to the robust Himalayan Pink Salt, this collection includes a diverse array of textures and taste profiles. Elevate your culinary creations with these exceptional salts that add depth and complexity to every dish. Crafted with care, the sampler is a blend of Cyprus Flake Salt, French Grey Sea Salt, Black Lava Hawaiian Salt, and more. Enhance your cooking experience and savor the essence of gourmet craftsmanship with this thoughtfully curated Gourmet Sea Salt Sampler.</summary>
+                A curated selection of premium sea salts sourced from around the world, this Gourmet Sea Salt Sampler is a testament to culinary sophistication. .</summary>
             <br>
             
                 <p>Reviews</p>
@@ -46,20 +46,7 @@
         </div>
 
         <div class="product-container">
-            <img src="Images/TruffleInfusedOliveOil.png" alt="TruffleInfusedOliveOil" height="320px" width="240px">
-            <p>Truffle Infused Olive Oil - Premium Culinary Elegance</p>
-            <summary>Ingredients:
-                Extra Virgin Olive Oil, Natural Truffle Extract, Truffle Pieces, Herbs, Spices, Love. Our truffle-infused olive oil is a culinary masterpiece that elevates your dishes to new heights. The rich aroma of truffles and the smooth texture of extra virgin olive oil come together in perfect harmony. Sourced from the finest olives and infused with natural truffle essence, this gourmet delight adds a touch of luxury to your culinary creations. Whether drizzled over salads, pasta, or grilled vegetables, each drop is a symphony of flavors. Im
-            
-                <p>Reviews</p>
-                <audio controls>
-                    <source src="Audio/TruffleInfusedOliveOil.mp3" type="audio/mp3">
-                    Your browser does not support the audio tag.
-                </audio>        
-        </div>
-
-        <div class="product-container">
-            <img src="Images/TruffleInfusedOliveOil.png" alt="TruffleInfusedOliveOil" height="320px" width="240px">
+            <img src="Images/SeaSaltCaramel.png" alt="TruffleInfusedOliveOil" height="320px" width="240px">
 
             <p>Exquisite Dark Chocolate Sea Salt Caramels - 8oz</p>
             <summary>Ingredients:
