--- a/Assignment-1/main.html
+++ b/Assignment-1/main.html
@@ -35,6 +35,13 @@
             <h4>Snacks</h4>
             <a href="Snacks.html"><button id="btn2">More>></button></a>
         </div>
+
+        <div class="gallery">
+            <img src="Images/GourmetIndulges.png" width="200px" height="200px">
+            <h4>Gourmet Indulges</h4>
+            <a href="Gourmet Culinary.html"><button id="btn2">More>></button></a>
+        </div>
+
     </div>
     <footer>
         <div>
