--- a/Assignment-1/main.html
+++ b/Assignment-1/main.html
@@ -42,6 +42,11 @@
             <a href="Gourmet Culinary.html"><button id="btn2">More>></button></a>
         </div>
 
+        <div class="gallery">
+            <img src="Images/ActiveLifestyle.png" width="200px" height="200px">
+            <h4>Gourmet Indulges</h4>
+            <a href="ActiveLifestyleFuelStation.html"><button id="btn2">More>></button></a>
+        </div>
     </div>
     <footer>
         <div>
