--- a/Assignment-1/ActiveLifestyleFuelStation.html
+++ b/Assignment-1/ActiveLifestyleFuelStation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Yogurts</title>
+    <title>Active Lifestyle Fuel Station</title>
     <link rel="icon" href="Images/icon.png" type="images/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=FontName">
     <link rel="stylesheet" type="text/css" href="Gourment Culinary.css">
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h2>Yogurt</h2>
+        <h2>Active Lifestyle Fuel Station</h2>
     </header>
     <div class="topnav">
         <a class="active" href="Main.html">Home</a>
@@ -40,7 +40,7 @@
             <summary>Ingredients:
                 Pure Coconut Water, Electrolyte Blend (Sodium, Potassium, Magnesium), Natural Coconut Flavor, Citric Acid.
                 Our coconut water is sourced from the finest coconuts, delivering a refreshing taste that's both hydrating and naturally sweet. 
-                The added electrolytes provide a perfect balance to replenish essential minerals lost during physical activity. </summary>
+                </summary>
             <br>
             
             
