--- a/Assignment-1/Gourmet Culinary.html
+++ b/Assignment-1/Gourmet Culinary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Yogurts</title>
+    <title>Gourmet Culinary</title>
     <link rel="icon" href="Images/icon.png" type="images/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=FontName">
     <link rel="stylesheet" type="text/css" href="Gourment Culinary.css">
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h2>Yogurt</h2>
+        <h2>Gourmet Culinary</h2>
     </header>
     <div class="topnav">
         <a class="active" href="Main.html">Home</a>
