--- a/Assignment-1/Yogurt.html
+++ b/Assignment-1/Yogurt.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h2>Yogurt</h2>
+        <h2>Yogurts</h2>
     </header>
     <div class="topnav">
         <a class="active" href="Main.html">Home</a>
