--- a/Assignment-1/main.html
+++ b/Assignment-1/main.html
@@ -44,7 +44,7 @@
 
         <div class="gallery">
             <img src="Images/ActiveLifestyle.png" width="200px" height="200px">
-            <h4>Gourmet Indulges</h4>
+            <h4>Active Lifestyle Fuel Station</h4>
             <a href="ActiveLifestyleFuelStation.html"><button id="btn2">More>></button></a>
         </div>
     </div>
