Added Healthy Meals

--- a/Assignment-1/main.html
+++ b/Assignment-1/main.html
@@ -47,6 +47,12 @@
             <h4>Active Lifestyle Fuel Station</h4>
             <a href="ActiveLifestyleFuelStation.html"><button id="btn2">More>></button></a>
         </div>
+
+        <div class="gallery">
+            <img src="Images/HealthyMeals.png" width="200px" height="200px">
+            <h4>Healthy Meals</h4>
+            <a href="HealthyMeals.html"><button id="btn2">More>></button></a>
+        </div>
     </div>
     <footer>
         <div>
