--- a/Assignment-2/portfolio.html
+++ b/Assignment-2/portfolio.html
@@ -6,6 +6,113 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="section1">
+        <div class= "header1">
+            <nav>
+                <ul>
+                    <li><a href="#section1"> Home </a></li>
+                    <li><a href="#section2"> About Me </a></li>
+                    <li><a href="#wrapper"> Academics </a></li>
+                    <li><a href="#section4"> Experience </a></li>
+                    <li><a href="#Cerification"> Cerifications </a></li>
+                    <li><a href="#contact"> Contact </a></li>
+                </ul>
+            </nav>
+        </div>
+    </div class="header2">
+        <h1> Hi, I'm <span> Hetal Gada</span></h1>
+    </div>
+    <a href="Files/Hetal's Resume.pdf" class="git">Resume</a>
+    </div>
+
+    <div id="section2">
+        <div class=" container1">
+            <div class="row1">
+                <div class="col1">
+                    <img src="Images/Hetal_Gada.jpeg" >
+                 </div>
+                 <div class= "col2">
+                    <h1> About Me <a href="files/Hetal_Gada_positioning_statement.m4a" target="_blank">
+                        <img src="Images/sound.png" height ="40px" width = "50px" alt="Play Audio">
+                    </a>
+                    </h1> 
+                    <summary>I am currently pursuing my Master's in Information System from Northeastern University.
+                        I'm proficient in leveraging advanced analytics, data science, and a diverse skill set to drive actionable insights and optimize business processes.
+                        I am detail-oriented and curious person with desire to work as data analyst or data scientist to approach real-world problems. 
+                        I possess good communication and interacting skills. I am quick learner and motivated to learn new technologies required to overcome challenges.
+                        I can be reached at gada.he@northeastern.edu. </summary>
+
+                    <div class=" skills">
+                        <h2> Skills</h2>
+                    </div>
+
+                    <div class="skills2">
+                        <ul>
+                            <li>Languages: Python, C, JAVA, R Programming, SQL, MATLAB </li>
+                            <li>Analytic Tools: Anaconda, Azure Data Studio, SSMS, Tableau, Power BI, NetBeans, ER Data Studio, Azure ML, Alteryx, Navicat, Jira </li>
+                            <li>Databases: MYSQL, Oracle 11g, MSSQL, SAP ERP, MongoDB, SAP HANA, Postgre SQL</li>
+                            <li>Environments: Visual Studio, Visual Studio Code, NetBeans</li>
+                            <li>DevOps: Git, GitHub</li>
+                            <li>Frameworks: Keras, Hadoop, Pandas, NumPy, Matplotlib, NLTK, Scikit-Learn</li>
+                            <li>Certification: AZ-900 Microsoft Azure Fundamentals (Microsoft)</li>
+                        </ul>
+                </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="section4">
+        <h1> Professional Experience</h1>
+        <table> 
+            <thead>
+                <tr>
+                    <th>Company</th>
+                    <th>Title</th>
+                    <th>Description</th>
+                    <th>Start Date - End Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Contentstack Inc </td>
+                    <td>Business Analyst</td>
+                    <td>•	Automated RESTful API data retrieval from Postman to AWS Lambda using Python which reduces manual effort by 40%, ensuring accurate and timely transfer to S3 buckets<br>
+                        •	Collaborated with Data Engineering to optimize data acquisition, improving efficiency, and enabling seamless integration with web analytics for enhanced data-driven decision-making<br>
+                    	•	Integrated Jira Management Tool and Salesforce data, cutting redundancy by 25% and improving accessibility<br>
+                        •	Leveraged Snowflake as a SQL scripting and database schema tool to enhance data integrity, resulting in a 20% reduction in data anomalies<br>
+                        •	Generated comprehensive quarterly and yearly reports on company financial metrics, showcasing automation successes and providing actionable insights that resulted in a $2.5M increase in TSO-Sales value<br>
+                    </td>
+                    <td>June 2023 - December 2023 </td>
+                </tr>
+                <tr>
+                    <td>Deloitte </td>
+                    <td>Senior Analyst</td>
+                    <td>•	Collaborated with the project team to understand and maintain focus on their analytical needs, including identifying critical metrics and KPIs and delivering actionable insights to relevant decision-makers<br>
+                        •   Analyzed and transformed data from diverse sources, maintaining 97% accuracy, and improved data accessibility and reporting efficiency by 87%<br>
+                        • 	Improved access, storage, and reporting of data for various domains such as Data Center and Network operations, in-house applications, and databases, SAP ERP, SAP HANA through deep cleaning and debugging, resulting in 18 outliers’ identification and 79% achievement of major business goals<br>
+                        • 	Identified 5+ process errors and coordinated across departments to create data-driven implementation improvement strategies and reduce risk efficiencies by 95%<br>
+                    </td>
+                    <td>June 2021 - July 2022</td>
+                </tr>
+                <tr>
+                    <td>Coloreyes Eyecare Pvt Ltd </td>
+                    <td>Data Analyst</td>
+                    <td>•	Achieved a 19% reduction in transportation costs, saving 70M annually by leveraging SharePoint, SQL, Excel, and Tableau for gathering and analyzing business intelligence on logistical processes <br>
+                        •   Improved inventory management and customer satisfaction by utilizing trend data to reduce back-ordering by 21% for retail partners <br>
+                        • 	Designed and executed statistical analysis, achieving a 12% decrease in cart abandonment, and enhancing e-commerce conversion rates<br>
+                        • 	Streamlined warehouse supply chain with efficient update process, minimizing downtime and boosting productivity across systems<br>
+                    </td>
+                    <td>May 2020 - March 2021</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="hedd">
+        <h1> Academic Projects</h1> 
+    </div>
+
 </body>
 </html>
