--- a/Assignment-2/portfolio.html
+++ b/Assignment-2/portfolio.html
@@ -3,26 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hetal Gada</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" type="text/css" href="style2.css">
+    <link rel="stylesheet" type="text/css" href="style3.css">
+    <link rel="stylesheet" type="text/css" href="style4.css">
+    <link rel="icon" type="image/x-icon" href="Images/Hetal_Gada_headshot.jpeg">
 </head>
 <body>
     <div id="section1">
-        <div class= "header1">
+        <div class="header1">
             <nav>
                 <ul>
                     <li><a href="#section1"> Home </a></li>
                     <li><a href="#section2"> About Me </a></li>
                     <li><a href="#wrapper"> Academics </a></li>
                     <li><a href="#section4"> Experience </a></li>
-                    <li><a href="#Cerification"> Cerifications </a></li>
+                    <li><a href="#Cerification"> Certifications </a></li>
                     <li><a href="#contact"> Contact </a></li>
                 </ul>
             </nav>
         </div>
-    </div class="header2">
-        <h1> Hi, I'm <span> Hetal Gada</span></h1>
-    </div>
-    <a href="Files/Hetal's Resume.pdf" class="git">Resume</a>
+        <div class="header2">
+            <h1>Hi, I'm <span>Hetal Gada</span></h1>          
+        </div>
+        <a href="Files/Hetal's Resume.pdf" class="git">Resume</a>
     </div>
 
     <div id="section2">
@@ -48,13 +54,13 @@
 
                     <div class="skills2">
                         <ul>
-                            <li>Languages: Python, C, JAVA, R Programming, SQL, MATLAB </li>
-                            <li>Analytic Tools: Anaconda, Azure Data Studio, SSMS, Tableau, Power BI, NetBeans, ER Data Studio, Azure ML, Alteryx, Navicat, Jira </li>
-                            <li>Databases: MYSQL, Oracle 11g, MSSQL, SAP ERP, MongoDB, SAP HANA, Postgre SQL</li>
-                            <li>Environments: Visual Studio, Visual Studio Code, NetBeans</li>
-                            <li>DevOps: Git, GitHub</li>
-                            <li>Frameworks: Keras, Hadoop, Pandas, NumPy, Matplotlib, NLTK, Scikit-Learn</li>
-                            <li>Certification: AZ-900 Microsoft Azure Fundamentals (Microsoft)</li>
+                            <li>Languages : Python, C, JAVA, R Programming, SQL, MATLAB </li>
+                            <li>Analytic Tools : Anaconda, Azure Data Studio, SSMS, Tableau, Power BI, NetBeans, ER Data Studio, Azure ML, Alteryx, Navicat, Jira </li>
+                            <li>Databases : MYSQL, Oracle 11g, MSSQL, SAP ERP, MongoDB, SAP HANA, Postgre SQL</li>
+                            <li>Environments : Visual Studio, Visual Studio Code, NetBeans</li>
+                            <li>DevOps : Git, GitHub</li>
+                            <li>Frameworks : Keras, Hadoop, Pandas, NumPy, Matplotlib, NLTK, Scikit-Learn</li>
+                            <li>Certifications : AZ-900 Microsoft Azure Fundamentals (Microsoft)</li>
                         </ul>
                 </div>
 
@@ -65,7 +71,7 @@
     </div>
 
     <div id="section4">
-        <h1> Professional Experience</h1>
+        <h1> Professional Experiences</h1>
         <table> 
             <thead>
                 <tr>
@@ -113,6 +119,103 @@
     <div class="hedd">
         <h1> Academic Projects</h1> 
     </div>
-
+    <div id="wrapper">
+        <div class="Academic">
+            <h4>Home and Beyond Emergency System</h4>
+            <p>
+                <ul>
+                    <li>Built a java swing application which gives emergency responses for service requests. Services like Police, Hospital, Shelter and Fire can be requested</li>
+                    <li>Established a solution for people to find every services at one place making it convenient access to them</li>
+                </ul>
+            </p>
+            
+            <video width="320" height="240" controls>
+                <source src="Files/2023-09-21_14-01-35.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <div class="Academic">
+            <h4>New York City (NYC) Motor Vehicle Collision Analysis</h4>
+            <p>
+                <ul>
+                    <li>Leveraged Tableau to create comprehensive dashboards illustrating collision data trends for analysis of collision occurrences by time of day, day of the week, and seasonal patterns</li>
+                    <li>Uncovered insights into specific regions with higher collision rates during nighttime in warmer months, informing city authorities for implementing targeted safety measures</li>
+                    <li>Received positive feedback from stakeholders for the clarity and usability of the visualizations, leading to 30% increased engagement with the data</li>
+                </ul>
+            </p>
+            <a href="Files/NYC_MotorVehicle_Visualization.pdf" class="gitt">Visualizations</a>
+        </div>
+        <div class="Academic">
+            <h4>Campus Recruitment Management System</h4>
+            <p>
+                <ul>
+                    <li>A university network of undergraduate and graduate students will have access to a centralized database system where all job listings including TAs, RAs, and off-campus job opportunities of various companies are provided in the portal</li>
+                    <li>During the development process of this project, an entity-relationship diagram was created to comprehend the whole flow of the project, which led to the implementation of the database using Azure Data Studio</li>
+                    <li>Created an analysis report using Tableau, depicting various visuals like maps, key influencers charts, line charts, graphs, and decomposition tree</li>
+                </ul>
+            </p>
+        </div>
+    </div>
+    <div id="Cerification">
+        <h1>Certifications</h1>
+            <div class="gallery">
+                <figure>
+                    <a href="Images/Data Science_certificate.png">
+                        <img src="Images/Data Science_certificate.png" height="200px" width="300px" alt="Data Science Certification">
+                        <br><figcaption>Data Science Fundamentals</figcaption>
+                    </a>
+                </figure>
+            </div>
+            <div class="gallery">
+                <figure>
+                    <a href="Images/ml_certificate.png">
+                        <img src="Images/ml_certificate.png" height="200px" width="300px" alt="ML Certification">
+                        <br><figcaption>Machine Learning Certificate</figcaption>
+                    </a>
+                </figure>
+            </div>
+            <div class="gallery">
+                <figure>
+                    <a href="Images/python_certificate.png">
+                        <img src="Images/python_certificate.png" height="200px" width="300px" alt="Python Certification">
+                        <br><figcaption>Python Fundamentals</figcaption>
+                    </a>
+                </figure>
+            </div>
+    </div>
+    
+    <div id="contact">
+        <div class="container1">
+            <div class="row1">
+                <div class="contact-left">
+                    <h1>
+                        Contact Me
+                    </h1>
+                    <a href="tel:+12345678900"><img src="images/telephone.png" alt="Contact" height="50px" width="50px"></a>&nbsp;&nbsp;&nbsp;
+        <a href="mailto:gada.he@northeasteern.edu"><img src="images/gmail.png" alt="Gmail" height="50px" width="50px"></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/in/hetalgada20/">
+            <img src="images/linkedin.png" alt="LinkedIn" height="50px" width="50px">
+        </a>&nbsp;&nbsp;&nbsp;
+        <a href="https://github.com/hetalgada15">
+            <img src="images/github.png" alt="GitHub" height="50px" width="50px">
+        </a> 
+                </div>
+                <div class="contact-right">
+                    <form>
+                        <input type="text" name="firstname" placeholder="Your Name">
+                        <input type="text" name="Email" placeholder="Email">
+                        <textarea name="subject" rows="6" placeholder="Message"></textarea>
+                        <button class="button button2" type="submit" value="Submit"> Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div>
+        <p>&copy; Data Engineer passionate about optimizing pipelines and ensuring data integrity for impactful insights. Let's connect for innovative data solutions!</p>
+        <p>Author: Hetal Gada</p>             
+    </div>
+    </footer>
 </body>
 </html>
