html changes with ids

--- a/Assignment-3/table.html
+++ b/Assignment-3/table.html
@@ -10,6 +10,9 @@
 	
 </head>
 <body>
+	<header> Hetal Gada - 002114112
+
+	</header>
 	<table id="myTable">
 		<tr>
 			<th></th>
@@ -20,10 +23,9 @@
 			<th>TYPE</th>
 			<th>BUDGET<br />#</th>
 			<th>PERCENTAGE</th>
-			<th>DELETE</th>
 		</tr>
-		<tr>
-			<td><input type="checkbox" /><br /><br /><img src="down.png" width="25px" /></td>
+		<tr id="row_1">
+			<td><input id=" check_1" type="checkbox" /><br /><br /><img src="down.png" width="25px" /></td>
 			<td>Student 1</td>
 			<td>Teacher 1</td>
 			<td>Approved</td>
@@ -31,9 +33,8 @@
 			<td>TA</td>
 			<td>12345</td>
 			<td>100%</td>
-			<td></td>
 		</tr>
-		<tr class="dropDownTextArea"><td colspan="8">
+		<tr id= "collapse_row_1"class="dropDownTextArea"><td colspan="8">
 			Advisor:<br /><br />
 			Award Details<br />
 			Summer 1-2014(TA)<br />
@@ -42,8 +43,8 @@
 			Comments:<br /><br /><br />
 			Award Status:<br /><br /><br />
 		</td></tr>
-		<tr bgcolor="orange">
-			<td><input type="checkbox" checked/><br /><br /><img src="down.png" width="25px" /></td>
+		<tr id= "row_2">
+			<td><input id= "check_2" type="checkbox" checked/><br /><br /><img src="down.png" width="25px" /></td>
 			<td>Student 2</td>
 			<td>Teacher 2</td>
 			<td>Approved</td>
@@ -51,9 +52,8 @@
 			<td>TA</td>
 			<td>23456</td>
 			<td>100%</td>
-			<td><button>Delete</button></td>
 		</tr>
-		<tr class="dropDownTextArea"><td colspan="8">
+		<tr  id= "collapse_row_2"class="dropDownTextArea"><td colspan="8">
 			Advisor:<br /><br />
 			Award Details<br />
 			Summer 1-2014(TA)<br />
@@ -62,8 +62,8 @@
 			Comments:<br /><br /><br />
 			Award Status:<br /><br /><br />
 		</td></tr>
-		<tr>
-			<td><input type="checkbox" /><br /><br /><img src="down.png" width="25px" /></td>
+		<tr id="row_3">
+			<td><input id=" check_3" type="checkbox" /><br /><br /><img src="down.png" width="25px" /></td>
 			<td>Student 3</td>
 			<td>Teacher 3</td>
 			<td>Approved</td>
@@ -71,9 +71,8 @@
 			<td>TA</td>
 			<td>34567</td>
 			<td>100%</td>
-			<td></td>
 		</tr>
-		<tr class="dropDownTextArea"><td colspan="8">
+		<tr id= "collapse_row_3" class="dropDownTextArea"><td colspan="8">
 			Advisor:<br /><br />
 			Award Details<br />
 			Summer 1-2014(TA)<br />
