--- a/Assignment-3/table.html
+++ b/Assignment-3/table.html
@@ -25,7 +25,7 @@
 			<th>PERCENTAGE</th>
 		</tr>
 		<tr id="row_1">
-			<td><input id=" check_1" type="checkbox" /><br /><br /><img src="down.png" width="25px" /></td>
+			<td><input id=" check_1" type="checkbox"  /><br /><br /><img src="down.png" width="25px" onclick=" mycollapse('collapse_row_1')" /></td>
 			<td>Student 1</td>
 			<td>Teacher 1</td>
 			<td>Approved</td>
@@ -44,7 +44,7 @@
 			Award Status:<br /><br /><br />
 		</td></tr>
 		<tr id= "row_2">
-			<td><input id= "check_2" type="checkbox" checked/><br /><br /><img src="down.png" width="25px" /></td>
+			<td><input id= "check_2" type="checkbox" checked/><br /><br /><img src="down.png" width="25px" onclick=" mycollapse('collapse_row_2')" /></td>
 			<td>Student 2</td>
 			<td>Teacher 2</td>
 			<td>Approved</td>
@@ -63,7 +63,7 @@
 			Award Status:<br /><br /><br />
 		</td></tr>
 		<tr id="row_3">
-			<td><input id=" check_3" type="checkbox" /><br /><br /><img src="down.png" width="25px" /></td>
+			<td><input id=" check_3" type="checkbox" /><br /><br /><img src="down.png" width="25px" onclick=" mycollapse('collapse_row_3')"/></td>
 			<td>Student 3</td>
 			<td>Teacher 3</td>
 			<td>Approved</td>
