--- a/Assignment-3/table.html
+++ b/Assignment-3/table.html
@@ -86,7 +86,7 @@
 	<br /><br />
 	
 	<button id="button">SUBMIT SELECTED AWARDS</button>
-	<button id="add">Add New Student</button>
+	<button id="add" onclick="addStudent()">Add New Student</button>
 
 	<nav class="socialmediaicons"></nav>
 	<script src="script.js"></script>
