--- a/Assignment-3/table.html
+++ b/Assignment-3/table.html
@@ -3,29 +3,35 @@
 <!-- Also read chapter 9 from slides - Regular Expressions -->
 
 <html>
+
 <head>
 	<title>Table CheckList</title>
 	<link rel="stylesheet" type="text/css" href="table.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	
-</head>
-<body>
-	<header> Hetal Gada - 002114112
 
+</head>
+
+<body>
+	<header>
+		Hetal Gada = 002114112
 	</header>
 	<table id="myTable">
 		<tr>
 			<th></th>
 			<th>STUDENT</th>
 			<th>ADVISOR</th>
-			<th>AWARD<br/>STATUS</th>
+			<th>AWARD<br />STATUS</th>
 			<th>SEMESTER</th>
 			<th>TYPE</th>
 			<th>BUDGET<br />#</th>
 			<th>PERCENTAGE</th>
+			<th style="display: none;">DELETE</th>
+			<th style="display: none;">EDIT</th>
+
 		</tr>
 		<tr id="row_1">
-			<td><input id=" check_1" type="checkbox"  /><br /><br /><img src="down.png" width="25px" onclick=" mycollapse('collapse_row_1')" /></td>
+			<td><input id="check_1" type="checkbox" onclick="oncheck('row_1','check_1')" /><br /><br /><img
+					src="down.png" width="25px" onclick="mycollapse('collapse_row_1' )" /></td>
 			<td>Student 1</td>
 			<td>Teacher 1</td>
 			<td>Approved</td>
@@ -33,18 +39,21 @@
 			<td>TA</td>
 			<td>12345</td>
 			<td>100%</td>
+
 		</tr>
-		<tr id= "collapse_row_1"class="dropDownTextArea"><td colspan="8">
-			Advisor:<br /><br />
-			Award Details<br />
-			Summer 1-2014(TA)<br />
-			Budget Number: <br />
-			Tuition Number: <br />
-			Comments:<br /><br /><br />
-			Award Status:<br /><br /><br />
-		</td></tr>
-		<tr id= "row_2">
-			<td><input id= "check_2" type="checkbox" checked/><br /><br /><img src="down.png" width="25px" onclick=" mycollapse('collapse_row_2')" /></td>
+		<tr id="collapse_row_1" class="dropDownTextArea">
+			<td colspan="8">
+				Advisor:<br /><br />
+				Award Details<br />
+				Summer 1-2014(TA)<br />
+				Budget Number: <br />
+				Tuition Number: <br />
+				Comments:<br /><br /><br />
+				Award Status:<br /><br /><br />
+		</tr>
+		<tr id="row_2">
+			<td><input id="check_2" type="checkbox" onclick="oncheck('row_2','check_2')" /><br /><br /><img
+					src="down.png" width="25px" onclick="mycollapse('collapse_row_2' )" /></td>
 			<td>Student 2</td>
 			<td>Teacher 2</td>
 			<td>Approved</td>
@@ -52,18 +61,22 @@
 			<td>TA</td>
 			<td>23456</td>
 			<td>100%</td>
+
 		</tr>
-		<tr  id= "collapse_row_2"class="dropDownTextArea"><td colspan="8">
-			Advisor:<br /><br />
-			Award Details<br />
-			Summer 1-2014(TA)<br />
-			Budget Number: <br />
-			Tuition Number: <br />
-			Comments:<br /><br /><br />
-			Award Status:<br /><br /><br />
-		</td></tr>
+		<tr id="collapse_row_2" class="dropDownTextArea">
+			<td colspan="8">
+				Advisor:<br /><br />
+				Award Details<br />
+				Summer 1-2014(TA)<br />
+				Budget Number: <br />
+				Tuition Number: <br />
+				Comments:<br /><br /><br />
+				Award Status:<br /><br /><br />
+			</td>
+		</tr>
 		<tr id="row_3">
-			<td><input id=" check_3" type="checkbox" /><br /><br /><img src="down.png" width="25px" onclick=" mycollapse('collapse_row_3')"/></td>
+			<td><input id="check_3" type="checkbox" onclick="oncheck('row_3','check_3')" /><br /><br /><img
+					src="down.png" width="25px" onclick="mycollapse('collapse_row_3' )" /></td>
 			<td>Student 3</td>
 			<td>Teacher 3</td>
 			<td>Approved</td>
@@ -71,25 +84,29 @@
 			<td>TA</td>
 			<td>34567</td>
 			<td>100%</td>
+
 		</tr>
-		<tr id= "collapse_row_3" class="dropDownTextArea"><td colspan="8">
-			Advisor:<br /><br />
-			Award Details<br />
-			Summer 1-2014(TA)<br />
-			Budget Number: <br />
-			Tuition Number: <br />
-			Comments:<br /><br /><br />
-			Award Status:<br /><br /><br />
-		</td></tr>
+		<tr id="collapse_row_3" class="dropDownTextArea">
+			<td colspan="8">
+				Advisor:<br /><br />
+				Award Details<br />
+				Summer 1-2014(TA)<br />
+				Budget Number: <br />
+				Tuition Number: <br />
+				Comments:<br /><br /><br />
+				Award Status:<br /><br /><br />
+			</td>
+		</tr>
 	</table>
 
 	<br /><br />
-	
+
 	<button id="button">SUBMIT SELECTED AWARDS</button>
-	<button id="add" onclick="addStudent()">Add New Student</button>
+	<button id="add" onclick="addstudent( )">Add New Student</button>
 
 	<nav class="socialmediaicons"></nav>
 	<script src="script.js"></script>
-	
+
 </body>
+
 </html>
