--- a/Assignment-4/Form.html
+++ b/Assignment-4/Form.html
@@ -77,18 +77,17 @@
             <label for="hear">How did you hear*:</label>
 			<input type='checkbox' name="link" value="facebook" /> Facebook
             <input type='checkbox' name="link" value="google" /> Google
-            <input type='checkbox' name="link" value="yelp" /> Yelp 
+            <input type='checkbox' name="link" value="yelp" /> Instagram 
 			<br><br> 
 
 			<label for="Category">Category for Feedback:*</label>
   			<select name="Category" id="optionSelect" required>
-    			<option value="--Please Choose a Drink--">--Please Choose a Drink--</option>
+    			<option value="--Please Choose a Drink--">--Please Choose Category--</option>
+    			<option value="Flat White">Flat White</option>
     			<option value="Caffè Americano">Caffè Americano</option>
     			<option value="Caramel Macchiato">Caramel Macchiato</option>
-    			<option value="Flat White">Flat White</option>
-				<option value="Iced Caramel Macchiato">Iced Caramel Macchiato</option>
-                <option value="Java Chip Frappuccino">Java Chip Frappuccino</option>
-				<option value="Other">Other</option>
+				<option value="Nitro Cold Brew">Nitro Cold Brew</option>
+                <option value="Any other drinks">Any other drinks</option>
   			</select>
 
             <div id="error_category" style="display: none; color: red;">
