--- a/Assignment-4/Form.html
+++ b/Assignment-4/Form.html
@@ -82,7 +82,7 @@
 
 			<label for="Category">Category for Feedback:*</label>
   			<select name="Category" id="optionSelect" required>
-    			<option value="--Please Choose a Drink--">--Please Choose Category--</option>
+    			<option value="--Please Choose a Drink--">--Please Choose a Drink--</option>
     			<option value="Flat White">Flat White</option>
     			<option value="Caffè Americano">Caffè Americano</option>
     			<option value="Caramel Macchiato">Caramel Macchiato</option>
@@ -109,7 +109,7 @@
 			<!--<label for="comments">Comments*:</label>
 			<textarea name="text" id="comments" placeholder="Your comments" rows="5" cols="25"></textarea>
 			<br><br>-->
-			<input type="Submit">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<input type="Submit" id="submitButton">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<input type="Reset">
 			<br><br>
 		</form>
