--- a/Assignment-4/Form.html
+++ b/Assignment-4/Form.html
@@ -80,7 +80,7 @@
             <input type='checkbox' name="link" value="yelp" /> Instagram 
 			<br><br> 
 
-			<label for="Category">Category for Feedback:*</label>
+			<label for="Category">Category for Instructions:*</label>
   			<select name="Category" id="optionSelect" required>
     			<option value="--Please Choose a Drink--">--Please Choose a Drink--</option>
     			<option value="Flat White">Flat White</option>
@@ -106,9 +106,10 @@
 			</div>
 
             <br><br>
-			<!--<label for="comments">Comments*:</label>
+			<label for="comments">Comments*:</label>
 			<textarea name="text" id="comments" placeholder="Your comments" rows="5" cols="25"></textarea>
-			<br><br>-->
+			<br><br>
+
 			<input type="Submit" id="submitButton">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<input type="Reset">
 			<br><br>
@@ -131,7 +132,7 @@
 		<th>State</th>
 		<th>Zipcode</th>
 		<th>Reference</th>
-		<!--<th>Comments</th>-->
+		<th>Feedback</th>
         <th>Comments</th>
 	</tr>
 </table>
